--- a/Grid2.html
+++ b/Grid2.html
@@ -62,7 +62,21 @@
 </nav>
 
     <main class="flex-shrink-0">
-       <div class="container">
+       <div class="container h-100 minHeight">
+            <div class="row h-100">
+                <div class="col-4">
+                    <div class="bg-secondary text-light p-3 h-100">
+                        <h5>Side Bar</h5>
+                    </div>
+
+                </div>
+                <div class="col">
+                    <div class="bg-dark text-light p-3 h-100">
+                        <h5>Main</h5>
+                    </div>
+
+                </div>
+            </div>
            
        </div>
     </main>
