--- a/Grid4.html
+++ b/Grid4.html
@@ -62,8 +62,24 @@
 </nav>
 
     <main class="flex-shrink-0">
-       <div class="container">
-           
+       <div class="container h-100 minHeight">
+           <div class="row row-cols-1 row-cols-md-3 gy-2 mt-2 h-100"> <!--stack for mobile with small top margin-->
+               <div class="col">
+                    <div class="bg-secondary text-dark h-100 p-2">
+                        Col One
+                    </div>
+               </div>
+               <div class="col">
+                    <div class="bg-dark text-light h-100 p-2">
+                        Col Two
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="bg-secondary text-dark h-100 p-2">
+                        Col Three
+                    </div>
+               </div>
+           </div>
        </div>
     </main>
     <footer class="footer mt-auto py-3 bg-dark sticky-footer">
