--- a/Grid4.html
+++ b/Grid4.html
@@ -63,7 +63,7 @@
 
     <main class="flex-shrink-0">
        <div class="container h-100 minHeight">
-           <div class="row row-cols-1 row-cols-md-3 gy-2 mt-2 h-100"> <!--stack for mobile with small top margin-->
+           <div class="row row-cols-1 row-cols-md-3 gy-2 h-100"> <!--stack for mobile-->
                <div class="col">
                     <div class="bg-secondary text-dark h-100 p-2">
                         Col One
