Created Grid 7 layout
Updated Grid7.html to add grid 7 layout. Edited css style sheet to have container fluid padding and container padding, Removed dflex and flex column classes from grid 3 and grid 3b containers.

--- a/Grid3b.html
+++ b/Grid3b.html
@@ -62,7 +62,7 @@
 </nav>
 
     <main class="flex-shrink-0">
-       <div class="container h-100 minHeight d-flex flex-column"> <!--dflex and flex-column to fix layout issue pushed down by nav pills-->
+       <div class="container h-100 minHeight"> <!--dflex and flex-column to fix layout issue pushed down by nav pills-->
         <!--NAVIGATION PILLS AT TOP OF GRID-->
         <ul class="nav nav-pills mb-1">
             <li class="nav-item">
