Created Grid 8 layout
Updated Grid8.html to add Grid 8 layout.  Copied container from Grid7,html and added another column. Changed the number of columns in a row to redesign the column wrapping.

--- a/Grid7.html
+++ b/Grid7.html
@@ -62,7 +62,7 @@
 </nav>
 
     <main class="flex-shrink-0">
-        <div class="container-fluid h-100 minHeight">
+        <div class="container-fluid h-100 minHeight"> <!--Container fluid allows for the container to fill 100% of the screen at all resolutions-->
             <div class="row row-cols-1 row-cols-md-2 h-100 gy-2">
                 <div class="col col-md-12"> <!--col-12 is a way to have two rows without creating two seperate rows-->
                     <div class="bg-secondary text-light h-100">
