Created Grid 9 layout
Updated Grid9.html to add Grid 9 layout.
Added more columns to the row to create another column. Played with breakpoints to get different layout of rows on smaller screens.

--- a/Grid9.html
+++ b/Grid9.html
@@ -62,9 +62,37 @@
 </nav>
 
     <main class="flex-shrink-0">
-       <div class="container">
-           
-       </div>
+        <div class="container-fluid h-100 minHeight"> <!--Container fluid allows for the container to fill 100% of the screen at all resolutions-->
+            <div class="row row-cols-1 row-cols-md-2 h-100 gy-2">
+                <div class="col col-md-12"> <!--col-12 is a way to have two rows without creating two seperate rows-->
+                    <div class="bg-secondary text-light h-100">
+                        Column One
+                    </div>
+                </div>
+                <!--Changed col-md to 3 to evenly distribute 4 lower columns-->
+                <!--Changed col to col-6 so when we go below a md breakpoint we get 3 rows of 2 columns-->
+                <div class="col-6 col-md-3 order-last">
+                     <div class="bg-dark text-light h-100">
+                         Column Two-but ordered last
+                     </div>
+                 </div>
+                 <div class="col-6 col-md-3">
+                     <div class="bg-secondary text-light h-100">
+                         Column Three
+                     </div>
+                 </div>
+                 <div class="col-6 col-md-3">
+                     <div class="bg-secondary text-light h-100">
+                         Column Three
+                     </div>
+                </div>
+                <div class="col-6 col-md-3"> <!--Copied container setup from grid 7 and added another column-->
+                    <div class="bg-secondary text-light h-100">
+                        Column Three
+                    </div>
+               </div>
+            </div>
+        </div>
     </main>
     <footer class="footer mt-auto py-3 bg-dark sticky-footer">
         <div class="container-fluid text-center">
