--- a/Grid8.html
+++ b/Grid8.html
@@ -79,7 +79,7 @@
                          Column Three
                      </div>
                  </div>
-                 <div class="col col-md-4"> <!--Copied container setup from grid 7 and added another column; changed breakpoints to 4 instead of 6-->
+                 <div class="col col-md-4"> <!--Copied container setup from grid 7 and added another column; changed col-md to 4 instead of 6-->
                      <div class="bg-secondary text-light h-100">
                          Column Three
                      </div>
